saveToFileErrorDocIds